[gd_scene load_steps=3 format=2]

[ext_resource path="res://Tools/EventCreator.gd" type="Script" id=1]
[ext_resource path="res://Tools/EventBox.tscn" type="PackedScene" id=2]

[node name="EventCreator" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selection" type="VBoxContainer" parent="."]
margin_right = 212.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="Label" type="Label" parent="Selection"]
margin_right = 212.0
margin_bottom = 14.0
text = "pick a file"
align = 1

[node name="Files" type="ItemList" parent="Selection"]
margin_top = 18.0
margin_right = 212.0
margin_bottom = 131.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Selection"]
margin_top = 135.0
margin_right = 212.0
margin_bottom = 149.0
text = "pick an event"
align = 1

[node name="Events" type="ItemList" parent="Selection"]
margin_top = 153.0
margin_right = 212.0
margin_bottom = 720.0
size_flags_vertical = 3

[node name="Data" type="Control" parent="."]
margin_left = 216.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3

[node name="EventContainer" type="ScrollContainer" parent="Data"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -587.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layout" type="VBoxContainer" parent="Data/EventContainer"]
margin_right = 465.0
margin_bottom = 1500.0
rect_min_size = Vector2( 0, 1500 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EventBox3" parent="Data/EventContainer/Layout" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 465.0
margin_bottom = 90.0

[node name="EventBox2" parent="Data/EventContainer/Layout" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 94.0
margin_right = 465.0
margin_bottom = 184.0

[node name="EventBox" parent="Data/EventContainer/Layout" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 188.0
margin_right = 465.0
margin_bottom = 278.0

[node name="Control" type="Control" parent="Data/EventContainer/Layout"]
margin_top = 282.0
margin_right = 465.0
margin_bottom = 1500.0
size_flags_vertical = 3

[connection signal="item_selected" from="Selection/Files" to="." method="_on_Files_item_selected"]
[connection signal="item_selected" from="Selection/Events" to="." method="_on_Events_item_selected"]
